--- a/.github/workflows/rails.yml
+++ b/.github/workflows/rails.yml
@@ -52,7 +52,7 @@ jobs:
           bundle install --jobs 4 --retry 3
           yarn install
 
-      - name: Setup test database
+      - name: Db create, migrate, seeds
         env:
           PGHOST: localhost
           PGUSER: postgres
@@ -62,17 +62,7 @@ jobs:
           RAILS_MASTER_KEY: ${{ secrets.RAILS_MASTER_KEY }}
 
         run: |
-          rake db:create db:migrate
-
-      - name: Run tests
-        env:
-          PGHOST: localhost
-          PGUSER: postgres
-          PG_PORT: 5432
-          RAILS_ENV: test
-          POSTGRES_PASSWORD: postgres
-          RAILS_MASTER_KEY: ${{ secrets.RAILS_MASTER_KEY }}
-        run: rake
+          rake db:create db:migrate db:seed
 
       - name: Deploy
         uses: akhileshns/heroku-deploy@v3.4.6
